--- a/scss/blocks/_mediaqueries.scss
+++ b/scss/blocks/_mediaqueries.scss
@@ -1,3 +1,38 @@
+@media only screen and (max-width:768px) {
+
+    .hero__text::after,
+    .hero__text::before {
+        display: none;
+    }
+
+    .hero__wrapper {
+        margin-right: auto;
+        margin-left: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding-top: 137px;
+    }
+
+    .hero__inner__wrapper {
+        margin-left: 0;
+    }
+
+
+    .hero__wrapper::after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        top: calc(50% + 320px);
+        left: calc(50% - 510px);
+        width: 450px;
+        height: 150px;
+        background: url("./../../images/hero-arrow.svg") no-repeat;
+    }
+}
+
 @media only screen and (max-width:700px) {
 
     .nav,
@@ -38,11 +73,17 @@
 
 }
 
-@media only screen and (max-width:1000px) {
-
-    .hero__text::after {
-        display: none;
+@media only screen and (max-width:430px) {
+    .hero__heading {
+        font-size: 40px;
+        line-height: 40px;
     }
+
+    .hero__container{
+        
+        background-image: url("./../../images/hero-mobile.jpg");
+    }
+
 }
 
 @media only screen and (max-width:333px) {
