--- a/css/main.css
+++ b/css/main.css
@@ -596,6 +596,7 @@ a {
   }
 
   .hero__wrapper {
+    padding-bottom: 300px;
     margin-right: auto;
     margin-left: auto;
     display: flex;
@@ -614,7 +615,7 @@ a {
     content: "";
     display: inline-block;
     position: absolute;
-    top: calc(50% + 320px);
+    top: calc(50% + 350px);
     left: calc(50% - 510px);
     width: 450px;
     height: 150px;
