--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -65,7 +65,7 @@
     flex-direction: column;
     justify-content: space-between;
     background-color: #333A44;
-    box-shadow: 0 5000px 0 5000px rgb(0 0 0 / 75%);
+    box-shadow: 0 5000px 0 5000px rgba(0, 0, 0, 0.75);
     mix-blend-mode: normal;     
     display: none;
 
