--- a/css/main.css
+++ b/css/main.css
@@ -568,7 +568,6 @@ a {
 }
 .hero__text::before {
   content: "";
-  width: 50px;
   display: inline-block;
   position: absolute;
   right: calc(100% + 57px);
@@ -589,6 +588,109 @@ a {
   background: url("./../../images/hero-arrow.svg") no-repeat;
 }
 
+.step-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.step-list__item {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  max-width: 350px;
+  width: 100%;
+}
+.step-list__item__wrapper::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  width: 486px;
+  height: 15px;
+  background-color: #E5ECF4;
+  margin-top: 48px;
+  transform: translate(-100%, -50%);
+  z-index: -1;
+}
+.step-list__item__wrapper::before {
+  content: "";
+  display: inline-block;
+  top: 0;
+  margin-bottom: 40px;
+  width: 96px;
+  height: 96px;
+  border-radius: 50%;
+  background: #FCB72B;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.step-list .step1::before {
+  background-image: url("./../../images/li-1.svg");
+}
+.step-list .step2::before {
+  background-image: url("./../../images/li-2.svg");
+}
+.step-list .step3::before {
+  background-image: url("./../../images/li-3.svg");
+}
+.step-list__item {
+  margin-bottom: 40px;
+}
+.step-list__item__text {
+  font-size: 15px;
+  line-height: 25px;
+  color: #939CAA;
+}
+.step-list__item__heading {
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: -1.07143px;
+  color: #495567;
+  margin-bottom: 27px;
+}
+
+@media only screen and (max-width: 1100px) {
+  .step__conteiner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .step-list {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .step-list__item {
+    max-width: 573px;
+  }
+  .step-list__item__wrapper {
+    padding-left: 100px;
+  }
+  .step-list__item__wrapper::after {
+    position: absolute;
+    left: calc(50% - 560px);
+    transform: rotate(90deg) translate(-50%, -50%);
+  }
+  .step-list__item__wrapper::before {
+    position: absolute;
+    left: calc(50% - 360px);
+  }
+  .step-list .step1::before {
+    background-image: url("./../../images/li-1.svg");
+  }
+  .step-list .step2::before {
+    background-image: url("./../../images/li-2.svg");
+  }
+  .step-list .step3::before {
+    background-image: url("./../../images/li-3.svg");
+  }
+}
 @media only screen and (max-width: 768px) {
   .hero__text::after,
 .hero__text::before {
@@ -620,6 +722,44 @@ a {
     width: 450px;
     height: 150px;
     background: url("./../../images/hero-arrow.svg") no-repeat;
+  }
+
+  .step-list {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+  }
+  .step-list__item {
+    text-align: center;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 311px;
+    width: 100%;
+    margin-bottom: 48px;
+    padding-top: 80px;
+  }
+  .step-list__item__heading {
+    font-size: 20px;
+    line-height: 28px;
+  }
+  .step-list__item__wrapper {
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+  }
+  .step-list__item__wrapper::after {
+    display: none;
+  }
+  .step-list__item__wrapper::before {
+    width: 56px;
+    height: 56px;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-size: 50%;
   }
 }
 @media only screen and (max-width: 700px) {
