--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,11 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  color: #FCB72B;
+  transition: all 0.5s ease;
+}
+
 .container {
   max-width: 1150px;
   margin-left: auto;
@@ -317,6 +322,9 @@ a {
   margin-bottom: 27px;
 }
 
+.telemetry {
+  margin-bottom: 200px;
+}
 .telemetry-list {
   display: flex;
   flex-direction: column;
@@ -331,10 +339,14 @@ a {
 }
 .telemetry-list__item:nth-child(2n) .telemetry__right__wrapper::before {
   content: url("./../../images/telemetry-arrow-right.svg");
-  left: calc(50% - 400px);
+  left: calc(0% - 550px);
+  top: 0;
 }
 .telemetry-list__item:nth-child(2n) .telemetry__right__wrapper {
   box-shadow: -514px 0 0 0 #E5ECF4;
+}
+.telemetry-list__item:nth-child(2n+1) .telemetry__right__wrapper {
+  box-shadow: 514px 0 0 0 #E5ECF4;
 }
 .telemetry-list__item:nth-child(2n) .telemetry__left {
   order: 1;
@@ -385,6 +397,77 @@ a {
   z-index: 5;
 }
 
+.app {
+  max-width: 1440px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #495567;
+}
+.app__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 102px;
+  padding-bottom: 102px;
+}
+.app__heading {
+  max-width: 415px;
+  font-size: 48px;
+  line-height: 48px;
+  letter-spacing: -2.14286px;
+  color: #FFFFFF;
+}
+.app__wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 18px;
+}
+
+.appstore {
+  background: #E5ECF4;
+  border-radius: 4px;
+  padding: 8px 16px;
+  padding-left: 52px;
+  background-image: url("./../images/appstore.svg");
+  background-repeat: no-repeat;
+  background-position: calc(0% + 16px) center;
+}
+.appstore__text {
+  font-size: 10px;
+  line-height: 15px;
+  letter-spacing: -0.446429px;
+  color: #495567;
+}
+.appstore__heading {
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: -0.892857px;
+  color: #495567;
+}
+
+.googleplay {
+  background: #E5ECF4;
+  border-radius: 4px;
+  padding: 8px 16px;
+  padding-left: 52px;
+  background-image: url("./../images/googleplay.svg");
+  background-repeat: no-repeat;
+  background-position: calc(0% + 16px) center;
+}
+.googleplay__text {
+  font-size: 10px;
+  line-height: 15px;
+  letter-spacing: -0.446429px;
+  color: #495567;
+}
+.googleplay__heading {
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: -0.892857px;
+  color: #495567;
+}
+
 @media only screen and (max-width: 1100px) {
   .step__conteiner {
     display: flex;
@@ -431,53 +514,55 @@ a {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    align-items: center;
     gap: 150px;
   }
   .telemetry-list__item {
-    width: 100%;
+    max-width: 573px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
   }
   .telemetry__left {
     order: 1;
-  }
-  .telemetry__left__heading {
-    font-size: 48px;
-    line-height: 48px;
-    letter-spacing: -2.14286px;
-    color: #495567;
-  }
-  .telemetry__left-text {
-    font-size: 15px;
-    line-height: 25px;
-    color: #939CAA;
+    max-width: 573px;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
   }
   .telemetry__right {
-    max-width: 445px;
+    max-width: 573px;
+    margin-right: 0;
+    margin-bottom: 56px;
   }
   .telemetry__right__wrapper {
     border-radius: 50%;
-    width: 445px;
-    height: 445px;
+    margin-right: auto;
+    margin-left: auto;
     position: relative;
-    box-shadow: 514px 0 0 0 #E5ECF4;
+    display: flex;
+    justify-content: center;
+    box-shadow: none;
   }
   .telemetry__right__wrapper__img {
     position: absolute;
-    width: 445px;
+    align-self: center;
     height: 445px;
     border-radius: 50%;
   }
+  .telemetry__right__wrapper::before:first-of-type {
+    top: 0;
+  }
+  .telemetry__right__item:nth-child(2n) .telemetry__right__wrapper {
+    box-shadow: -514px 0 0 0 #E5ECF4;
+  }
+  .telemetry__right__item:nth-child(2n+1) .telemetry__right__wrapper {
+    box-shadow: 514px 0 0 0 #E5ECF4;
+  }
   .telemetry__right__wrapper::before {
-    content: url("./../../images/telemetry-arrow-left.svg");
-    display: inline-block;
-    position: absolute;
-    left: calc(50% - 350px);
-    bottom: 0;
-    width: 741px;
-    height: 150px;
-    z-index: 5;
+    top: 30%;
+    left: calc(100% - 100px);
   }
 }
 @media only screen and (max-width: 768px) {
@@ -491,6 +576,47 @@ a {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+  }
+  .telemetry__right {
+    max-width: 573px;
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 56px;
+  }
+  .telemetry__right__wrapper {
+    border-radius: 50%;
+    width: 445px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    box-shadow: none;
+  }
+  .telemetry__right__wrapper__img {
+    position: absolute;
+    align-self: center;
+    height: 445px;
+    border-radius: 50%;
+  }
+}
+@media only screen and (max-width: 820px) {
+  .app {
+    background-color: #495567;
+  }
+  .app__container {
+    gap: 40px;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .app__heading {
+    font-size: 48px;
+    line-height: 48px;
+    text-align: center;
+  }
+  .app__wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 12px;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -519,7 +645,7 @@ a {
     content: "";
     display: inline-block;
     position: absolute;
-    top: calc(50% + 350px);
+    top: 80%;
     left: calc(50% - 510px);
     width: 450px;
     height: 150px;
@@ -598,6 +724,80 @@ a {
     justify-content: center;
   }
 }
+@media only screen and (max-width: 500px) {
+  .telemetry__left {
+    max-width: 445px;
+  }
+  .telemetry__left__heading {
+    font-size: 32px;
+    line-height: 32px;
+    margin-bottom: 32px;
+  }
+  .telemetry__left-text {
+    margin-bottom: 32px;
+  }
+
+  .telemetry__right__wrapper {
+    max-height: 311px;
+    max-width: 311px;
+    height: 311px;
+    width: 100%;
+  }
+  .telemetry__right__wrapper::before {
+    width: 398px;
+    height: 75px;
+  }
+  .telemetry__right__wrapper__item:nth-child(2n) .telemetry__right__wrapper::before {
+    width: 398px;
+    height: auto;
+    top: 0;
+    left: calc(0% - 500px);
+  }
+  .telemetry__right__wrapper__img {
+    height: auto;
+    max-width: 311px;
+    width: 100%;
+  }
+  .telemetry__right__wrapper__item:nth-child(2n) .telemetry__right__wrapper {
+    box-shadow: -311px 0 0 0 #E5ECF4;
+  }
+  .telemetry__right__wrapper__item:nth-child(2n+1) .telemetry__right__wrapper {
+    box-shadow: 311px 0 0 0 #E5ECF4;
+  }
+}
+@media only screen and (max-width: 460px) {
+  .app__heading {
+    font-size: 32px;
+    line-height: 32px;
+    max-width: 290px;
+  }
+  .app .appstore {
+    max-width: 130px;
+    max-height: 40px;
+  }
+  .app .appstore__text {
+    font-size: 8px;
+    line-height: 10px;
+  }
+  .app .appstore__heading {
+    max-width: 415px;
+    font-size: 13px;
+    line-height: 13px;
+  }
+  .app .googleplay {
+    max-width: 130px;
+    max-height: 40px;
+  }
+  .app .googleplay__text {
+    font-size: 8px;
+    line-height: 10px;
+  }
+  .app .googleplay__heading {
+    max-width: 415px;
+    font-size: 13px;
+    line-height: 13px;
+  }
+}
 @media only screen and (max-width: 430px) {
   .hero__heading {
     font-size: 40px;
@@ -607,10 +807,21 @@ a {
   .hero__container {
     background-image: url("./../../images/hero-mobile.jpg");
   }
+
+  .telemetry__right__wrapper::before {
+    top: 0;
+    left: calc(100% - 100px);
+  }
 }
 @media only screen and (max-width: 333px) {
   .button {
     font-size: 15px;
     line-height: 25px;
+  }
+
+  .app__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
   }
 }/*# sourceMappingURL=main.css.map */
