--- a/scss/blocks/_app.scss
+++ b/scss/blocks/_app.scss
@@ -3,6 +3,11 @@
     margin-right: auto;
     margin-left: auto;
     background-color: #495567;
+    background-image: url("./../images/circles.png");
+    background-repeat: no-repeat;
+    background-position: calc(100% + 150px) calc(100% + 170px);
+    background-size: contain;
+    ;
 
     &__container {
         display: flex;
@@ -10,6 +15,7 @@
         align-items: center;
         padding-top: 102px;
         padding-bottom: 102px;
+
     }
 
     &__heading {
