--- a/scss/blocks/_app.scss
+++ b/scss/blocks/_app.scss
@@ -2,7 +2,7 @@
     max-width: 1440px;
     margin-right: auto;
     margin-left: auto;
-    background-color: #495567;
+    background-color: $darkNavy;
     background-image: url("./../images/circles.png");
     background-repeat: no-repeat;
     background-position: calc(100% + 150px) calc(100% + 170px);
@@ -35,7 +35,7 @@
 }
 
 .appstore {
-    background: #E5ECF4;
+    background: $lightGrey;
     border-radius: 4px;
     padding: 8px 16px;
     padding-left: 52px;
@@ -47,7 +47,7 @@
         font-size: 10px;
         line-height: 15px;
         letter-spacing: -0.446429px;
-        color: #495567;
+        color: $darkNavy;
     }
 
     &__heading {
@@ -56,13 +56,13 @@
         font-size: 20px;
         line-height: 24px;
         letter-spacing: -0.892857px;
-        color: #495567;
+        color: $darkNavy;
     }
 }
 
 .googleplay {
 
-    background: #E5ECF4;
+    background: $lightGrey;
     border-radius: 4px;
     padding: 8px 16px;
     padding-left: 52px;
@@ -74,14 +74,14 @@
         font-size: 10px;
         line-height: 15px;
         letter-spacing: -0.446429px;
-        color: #495567;
+        color: $darkNavy;
     }
 
     &__heading {
         font-size: 20px;
         line-height: 24px;
         letter-spacing: -0.892857px;
-        color: #495567;
+        color: $darkNavy;
 
     }
 }
