--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -38,7 +38,7 @@
         &__item__link {
             font-size: 15px;
             line-height: 25px;
-            color: #939CAA;
+            color: $dimGrey;
         }
     }
 }
