--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -45,7 +45,7 @@
         &__item__link {
             font-size: 15px;
             line-height: 25px;
-            color: #939CAA;
+            color: $dimGrey;
         }
     }
 }
@@ -84,7 +84,7 @@
             font-family: 'Space Mono';
             font-size: 18px;
             line-height: 25px;
-            color: #E5ECF4;
+            color: $lightGrey;
 
         }
     }
