--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -55,7 +55,7 @@
         top: 50%;
         width: 10000px;
         height: 15px;
-        background: #FCB72B;
+        background: $yellow;
         background-image: url("./../../images/hero-left-arrow.svg");
     }
 
